src/objects/SalesAreaToFieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Holds Mapping between the Sales Area &amp; API Name of Account fields &amp; few other values that are required to kept configurable.</description>
    <fields>
        <fullName>Custom_Call_Interval_Value__c</fullName>
        <label>Custom Call Interval Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Call_Interval__c</fullName>
        <label>Custom Call Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxNumber__c</fullName>
        <label>MaxNumber</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Call_List_Date__c</fullName>
        <label>Next Call List Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Reached_Counter__c</fullName>
        <label>Not Reached Counter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubSegment__c</fullName>
        <label>SubSegment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopSegment__c</fullName>
        <label>TopSegment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SalesAreaToFieldMapping</label>
</CustomObject>